// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollaborationLink renders correctly to match snapshot when there is a collaboration link 1`] = `
<div>
  <div
    class="makeStyles-collaborationLink-41"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-collaborationLinkHeading-42 css-12gb3o9-MuiTypography-root"
    >
      Collaboration Link
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
    >
      <a
        href="https://testlab.test-datalabs.nerc.ac.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://testlab.test-datalabs.nerc.ac.uk
      </a>
    </p>
  </div>
</div>
`;

exports[`CollaborationLink renders correctly to match snapshot when there is not a collaboration link 1`] = `<div />`;

exports[`ProjectInfoContainer renders correctly passing correct props to children 1`] = `
<div>
  <div>
    <div
      class="makeStyles-projectTitleWrapper-3"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 makeStyles-projectTitle-1 css-k8n68h-MuiTypography-root"
      >
        Test Project
      </h5>
      <span
        class="makeStyles-ResourceInfoSpan-4 makeStyles-root-9"
      >
        (testproj)
      </span>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-description-2 css-12gb3o9-MuiTypography-root"
    >
      A description about Test Project.
    </p>
    <div
      class="makeStyles-collaborationLink-5"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 makeStyles-collaborationLinkHeading-6 css-12gb3o9-MuiTypography-root"
      >
        Collaboration Link
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
      >
        <a
          href="https://testlab.test-datalabs.nerc.ac.uk"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://testlab.test-datalabs.nerc.ac.uk
        </a>
      </p>
    </div>
    <div
      class="makeStyles-userBlock-7"
    >
      <div>
        <div />
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-8 css-161uzub-MuiTypography-root"
          >
            user
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user1@test
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectInfoContainer renders correctly when there are multiple users 1`] = `
<div>
  <div>
    <div
      class="makeStyles-projectTitleWrapper-12"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 makeStyles-projectTitle-10 css-k8n68h-MuiTypography-root"
      >
        Test Project
      </h5>
      <span
        class="makeStyles-ResourceInfoSpan-13 makeStyles-root-18"
      >
        (testproj)
      </span>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-description-11 css-12gb3o9-MuiTypography-root"
    >
      A description about Test Project.
    </p>
    <div
      class="makeStyles-collaborationLink-14"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 makeStyles-collaborationLinkHeading-15 css-12gb3o9-MuiTypography-root"
      >
        Collaboration Link
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
      >
        <a
          href="https://testlab.test-datalabs.nerc.ac.uk"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://testlab.test-datalabs.nerc.ac.uk
        </a>
      </p>
    </div>
    <div
      class="makeStyles-userBlock-16"
    >
      <div>
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-17 css-161uzub-MuiTypography-root"
          >
            admin
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user4@test
            </span>
          </div>
        </div>
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-17 css-161uzub-MuiTypography-root"
          >
            user
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user1@test
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user3@test
            </span>
          </div>
        </div>
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-17 css-161uzub-MuiTypography-root"
          >
            viewer
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user2@test
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PureProjectInfoContainer renders correctly to match snapshot when there is a collaboration link 1`] = `
<div>
  <div>
    <div
      class="makeStyles-projectTitleWrapper-21"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 makeStyles-projectTitle-19 css-k8n68h-MuiTypography-root"
      >
        Test Project
      </h5>
      <span
        class="makeStyles-ResourceInfoSpan-22 makeStyles-root-27"
      >
        (testproj)
      </span>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-description-20 css-12gb3o9-MuiTypography-root"
    >
      A description about Test Project.
    </p>
    <div
      class="makeStyles-collaborationLink-23"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 makeStyles-collaborationLinkHeading-24 css-12gb3o9-MuiTypography-root"
      >
        Collaboration Link
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
      >
        <a
          href="https://testlab.test-datalabs.nerc.ac.uk"
          rel="noopener noreferrer"
          target="_blank"
        >
          https://testlab.test-datalabs.nerc.ac.uk
        </a>
      </p>
    </div>
    <div
      class="makeStyles-userBlock-25"
    >
      <div>
        <div />
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-26 css-161uzub-MuiTypography-root"
          >
            user
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user1@test
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`PureProjectInfoContainer renders correctly to match snapshot when there is not a collaboration link 1`] = `
<div>
  <div>
    <div
      class="makeStyles-projectTitleWrapper-30"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 makeStyles-projectTitle-28 css-k8n68h-MuiTypography-root"
      >
        Test Project
      </h5>
      <span
        class="makeStyles-ResourceInfoSpan-31 makeStyles-root-36"
      >
        (testproj)
      </span>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-description-29 css-12gb3o9-MuiTypography-root"
    >
      A description about Test Project.
    </p>
    <div
      class="makeStyles-userBlock-34"
    >
      <div>
        <div />
        <div>
          <h6
            class="MuiTypography-root MuiTypography-h6 makeStyles-chipTitle-35 css-161uzub-MuiTypography-root"
          >
            user
            s
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-17el4er-MuiChip-root"
            tabindex="-1"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              user1@test
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;
